Using npm instead

--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "svg blob",
     "svg shape"
   ],
-  "author": "Nghiep <me@nghiepit.dev>",
+  "author": "Nghiep <me@nghiep.dev>",
   "license": "MIT"
 }
